DT-1859 select text and spacing fixed

--- a/less/plugins/plugin-ecommerce.less
+++ b/less/plugins/plugin-ecommerce.less
@@ -85,6 +85,10 @@
     display: inline-block;
 }
 
+.ecomproduct__select-wrap {
+    margin-bottom: 5px;
+}
+
 // Basket Buttons
 
 .ecomproduct__view-basket-wrap {
@@ -353,6 +357,8 @@
 }
 
 select {
+    font-size: 16px;
+    min-width: 80px;
     @media @tablet {
         width: 100%;
     }
